--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -529,6 +529,7 @@ h2 {
 .home-title {
 	font-weight: bold;
 	font-size: 35px;
+	width: 100%;
 }
 
 .home-divider {
@@ -578,5 +579,17 @@ h2 {
 	font-style: italic;
 }
 
+.modal-btn {
+	margin: 0px;
+	margin-left: 5px;
+}
 
+.free-space {
+	height: 75px;
+}
+
+.loaded-container {
+	position: relative;
+	overflow: hidden;
+}
 
