--- a/src/main/resources/templates/evento/eventoShow.html
+++ b/src/main/resources/templates/evento/eventoShow.html
@@ -18,7 +18,9 @@
 						<div class="clearfix"></div>
 					</div>
 
-					<th:block th:include="evento/eventoFragment :: evento(false)"></th:block>
+					<div id="toModal">
+						<th:block th:include="evento/eventoFragment :: evento(false)"></th:block>
+					</div>
 
 				</div>
 			</div>
