fix grafici e rimosse init inutili

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,8 +9,8 @@
 			<div class="col-md-12 col-sm-12 col-xs-12">
 
 				<!-- title -->
-				<div class="page-title">
-					<div class="title_left">
+				<div class="row">
+					<div class="col-xs-12">
 						<div class="home-title" th:text="#{label.home_page}">Home page</div>
 					</div>
 				</div>
