--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -181,25 +181,6 @@
 				"ordering" : false,
 			});
 
-			$('.datatable-responsive-pianoFormativo-edit').DataTable({
-				"bFilter" : false,
-				"bInfo" : false,
-				"bPaginate" : false,
-				"ordering" : false,
-				"columnDefs": [ {
-					"targets": 1,
-					"width": "1px",
-					"sClass": "center"
-				} ],
-			});
-
-			$('.datatable-responsive-pianoFormativo-show').DataTable({
-				"bFilter" : false,
-				"bInfo" : false,
-				"bPaginate" : false,
-				"ordering" : false,
-			});
-
 			$('.datatable-responsive-ordering').DataTable({
 				"bFilter" : false,
 			});
@@ -265,7 +246,7 @@
 			});
 
 			$('.modal').on('shown.bs.modal', function () {
-				$("#tabella-modale").DataTable()
+				$($.fn.dataTable.tables(true)).DataTable()
 	           		.responsive.recalc()
 	           		.columns.adjust();
 		    });
@@ -275,6 +256,12 @@
 		           	.responsive.recalc()
 		           	.columns.adjust();
 		    });
+
+			$('.accordion').on('shown.bs.collapse', function () {
+				$($.fn.dataTable.tables(true)).DataTable()
+	           	.responsive.recalc()
+	           	.columns.adjust();
+			});
 
 			if([[${message}]]){
 	        	sendNotify();
