--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -12,7 +12,7 @@
 					<div class="x_title">
 						<h2 th:text="#{label.accreditamento_titolo(Visualizzazione, ${accreditamentoWrapper.accreditamento.tipoDomanda.nome},${accreditamentoWrapper.accreditamento.stato.nome})}">Provvisorio - bozza</h2>
 						<div class="pull-right buttons-header">
-							<a class="btn btn-success pull-right" th:text="#{label.modifica}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/edit|}"></a>
+							<button type="button" class="btn btn-success pull-right" th:text="#{label.modifica}" onclick="switchMode()"></button>
 							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/provider/${accreditamentoWrapper.provider.id}/accreditamento/list|}"></a>
 						</div>
 						<div class="clearfix"></div>
@@ -22,6 +22,22 @@
 
 				</div>
 			</div>
+			<script th:inline="javascript">
+			/*<![CDATA[*/
+
+			  	var tabSelected = "tab1";
+				$('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+					tabSelected = e.target.id;
+					console.log(tabSelected);
+				});
+
+				function switchMode() {
+					var param = "?tab=" + tabSelected;
+					var url = [[@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/edit|}]] + param;
+					location.href = url;
+				}
+			/*]]>*/
+			</script>
 		</div>
 	</div>
 </body>
