--- a/src/main/resources/templates/pianoFormativo/pianoFormativoFragment.html
+++ b/src/main/resources/templates/pianoFormativo/pianoFormativoFragment.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 	<!-- tabella degli eventi del pianoFormativo -->
-	<!-- parametri del fragment: boolean passato come parametro, id del provider e nome del wrapper -->
-	<th:block th:fragment="pianoFormativo(wrapper, accreditamentoId, editabile)">
+	<!-- parametri del fragment: boolean passato come parametro, id del provider e nome del pianoFormativo -->
+	<th:block th:fragment="pianoFormativo(pianoFormativo, accreditamentoId, editabile)">
 		<!-- ogni parte non in comune tra le due sarà gestito in maniera appropriata -->
-		<div th:if="${(__${wrapper}__.pianoFormativo == null) or #lists.isEmpty(__${wrapper}__.pianoFormativo.eventi)}" th:text="#{label.nessun_evento_piano_formativo}"></div>
+		<div th:if="${(__${pianoFormativo}__ == null) or #lists.isEmpty(__${pianoFormativo}__.eventi)}" th:text="#{label.nessun_evento_piano_formativo}"></div>
 
-		<table th:unless="${(__${wrapper}__.pianoFormativo == null) or #lists.isEmpty(__${wrapper}__.pianoFormativo.eventi)}" id="piano-formativo-table" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%" th:classappend="${editabile ? 'datatable-responsive-evento-edit' : 'datatable-responsive-accreditamento-show'}"> <!-- cambiare table accreditamento con evento in accreditamentoShow -->
+		<table th:unless="${(__${pianoFormativo}__ == null) or #lists.isEmpty(__${pianoFormativo}__.eventi)}" id="piano-formativo-table" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%" th:classappend="${editabile ? 'datatable-responsive-evento-edit' : 'datatable-responsive-accreditamento-show'}"> <!-- cambiare table accreditamento con evento in accreditamentoShow -->
 			<thead>
 				<tr>
 					<th th:text="#{label.tipologia_evento}">Tipologia dell'evento</th>
@@ -20,14 +20,15 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="evento, row : ${__${wrapper}__.pianoFormativo.eventi}">
-					<td><a th:text="${evento.titolo}" th:href="@{|/accreditamento/${accreditamentoId}/provider/${__${wrapper}__.pianoFormativo.provider.id}/pianoFormativo/${__${wrapper}__.pianoFormativo.provider.id}/evento/${evento.id}/show|}"></a></td>
+				<tr th:each="evento, row : ${__${pianoFormativo}__.eventi}">
+					<td th:if="${editabile}"><a th:text="${evento.titolo}" th:href="@{|/accreditamento/${accreditamentoId}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.provider.id}/evento/${evento.id}/show?from=edit|}"></a></td>
+					<td th:unless="${editabile}"><a th:text="${evento.titolo}" th:href="@{|/accreditamento/${accreditamentoId}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.provider.id}/evento/${evento.id}/show|}"></a></td>
 					<th:block th:if="${editabile}">
 						<td>
 							<span style="white-space: nowrap">
-								<a th:unless="${evento.new or !__${wrapper}__.pianoFormativo.pianoModificabile}" th:href="@{|/accreditamento/${accreditamentoId}/provider/${__${wrapper}__.pianoFormativo.provider.id}/pianoFormativo/${__${wrapper}__.pianoFormativo.id}/evento/${evento.id}/delete|}" class="btn btn-table double btn-danger"><span class="fa fa-trash"></span> <span th:text="#{label.elimina}"></span></a>
-								<a th:if="${evento.new or !__${wrapper}__.pianoFormativo.pianoModificabile}" class="btn btn-table double btn-danger disabled"><span class="fa fa-trash"></span> <span th:text="#{label.elimina}"></span></a>
-								<a th:unless="${evento.new}" th:href="@{|/accreditamento/${accreditamentoId}/provider/${__${wrapper}__.pianoFormativo.provider.id}/pianoFormativo/${__${wrapper}__.pianoFormativo.id}/evento/${evento.id}/edit|}" class="btn btn-primary btn-table double"><span class="fa fa-pencil"></span> <span th:text="#{label.modifica}">Modifica</span></a>
+								<a th:unless="${evento.new or !__${pianoFormativo}__.pianoModificabile}" th:href="@{|/accreditamento/${accreditamentoId}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/delete|}" class="btn btn-table double btn-danger"><span class="fa fa-trash"></span> <span th:text="#{label.elimina}"></span></a>
+								<a th:if="${evento.new or !__${pianoFormativo}__.pianoModificabile}" class="btn btn-table double btn-danger disabled"><span class="fa fa-trash"></span> <span th:text="#{label.elimina}"></span></a>
+								<a th:unless="${evento.new}" th:href="@{|/accreditamento/${accreditamentoId}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/edit|}" class="btn btn-primary btn-table double"><span class="fa fa-pencil"></span> <span th:text="#{label.modifica}">Modifica</span></a>
 								<a th:if="${evento.new}" class="btn btn-primary btn-table double disabled"><span class="fa fa-pencil"></span> <span th:text="#{label.modifica}">Modifica</span></a>
 							</span>
 						</td>
