--- a/src/main/resources/templates/accreditamento/accreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoFragment.html
@@ -103,7 +103,8 @@
 												</tr>
 												<!-- LEGALE RAPPRESENTANTE -->
 												<tr>
-													<td th:unless="${accreditamentoWrapper.legaleRappresentante == null}"><a th:text="#{label.legale_rappresentante}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.legaleRappresentante.id}/show|}"></a></td>
+													<td th:if="${accreditamentoWrapper.legaleRappresentante != null and !editabile}"><a th:text="#{label.legale_rappresentante}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.legaleRappresentante.id}/show|}"></a></td>
+													<td th:if="${accreditamentoWrapper.legaleRappresentante != null and editabile}"><a th:text="#{label.legale_rappresentante}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.legaleRappresentante.id}/show?from=edit|}"></a></td>
 													<td th:if="${accreditamentoWrapper.legaleRappresentante == null}"><div th:text="#{label.legale_rappresentante}"></div></td>
 													<td	th:unless="${accreditamentoWrapper.legaleRappresentanteStato}">
 														<span class="fa table-icon fa-remove red" th:title="#{label.non_inserito}"></span>
@@ -121,7 +122,8 @@
 												</tr>
 												<!-- DELEGATO LEGALE RAPPRESENTANTE -->
 												<tr th:if="${accreditamentoWrapper.provider.tipoOrganizzatore.tipoP}">
-													<td th:unless="${accreditamentoWrapper.delegatoLegaleRappresentante == null}"><a th:text="#{label.delegato_legale_rappresentante}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.delegatoLegaleRappresentante.id}/show|}"></a></td>
+													<td th:if="${accreditamentoWrapper.delegatoLegaleRappresentante != null and !editabile}"><a th:text="#{label.delegato_legale_rappresentante}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.delegatoLegaleRappresentante.id}/show|}"></a></td>
+													<td th:if="${accreditamentoWrapper.delegatoLegaleRappresentante != null and editabile}"><a th:text="#{label.delegato_legale_rappresentante}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.delegatoLegaleRappresentante.id}/show?from=edit|}"></a></td>
 													<td th:if="${accreditamentoWrapper.delegatoLegaleRappresentante == null}"><div th:text="#{label.delegato_legale_rappresentante}"></div></td>
 													<td	th:unless="${accreditamentoWrapper.delegatoLegaleRappresentanteStato}">
 														<span class="fa table-icon fa-remove grey" th:title="#{label.facoltativo}"></span>
@@ -208,7 +210,8 @@
 											<tbody>
 												<!-- RESPONSABILE SEGRETERIA -->
 												<tr>
-													<td th:unless="${accreditamentoWrapper.responsabileSegreteria == null}"><a th:text="#{label.responsabile_segreteria}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileSegreteria.id}/show|}"></a></td>
+													<td th:if="${accreditamentoWrapper.responsabileSegreteria != null and !editabile}"><a th:text="#{label.responsabile_segreteria}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileSegreteria.id}/show|}"></a></td>
+													<td th:if="${accreditamentoWrapper.responsabileSegreteria != null and editabile}"><a th:text="#{label.responsabile_segreteria}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileSegreteria.id}/show?from=edit|}"></a></td>
 													<td th:if="${accreditamentoWrapper.responsabileSegreteria == null}"><div th:text="#{label.responsabile_segreteria}"></div></td>
 													<td	th:if="${accreditamentoWrapper.responsabileSegreteriaStato}">
 														<span class="fa table-icon fa-check green" th:title="#{label.ok}"></span>
@@ -226,7 +229,8 @@
 												</tr>
 												<!-- RESPONSABILE AMMINISTRATIVO -->
 												<tr>
-													<td th:unless="${accreditamentoWrapper.responsabileAmministrativo == null}"><a th:text="#{label.responsabile_amministrativo}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileAmministrativo.id}/show|}"></a></td>
+													<td th:if="${accreditamentoWrapper.responsabileAmministrativo != null and !editabile}"><a th:text="#{label.responsabile_amministrativo}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileAmministrativo.id}/show|}"></a></td>
+													<td th:if="${accreditamentoWrapper.responsabileAmministrativo != null and editabile}"><a th:text="#{label.responsabile_amministrativo}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileAmministrativo.id}/show?from=edit|}"></a></td>
 													<td th:if="${accreditamentoWrapper.responsabileAmministrativo == null}"><div th:text="#{label.responsabile_amministrativo}"></div></td>
 													<td	th:if="${accreditamentoWrapper.responsabileAmministrativoStato}">
 														<span class="fa table-icon fa-check green" th:title="#{label.ok}"></span>
@@ -244,7 +248,8 @@
 												</tr>
 												<!--  RESPONSABILE SISTEMA INFORMATICO -->
 												<tr>
-													<td th:unless="${accreditamentoWrapper.responsabileSistemaInformatico == null}"><a th:text="#{label.responsabile_sistema_informatico}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileSistemaInformatico.id}/show|}"></a></td>
+													<td th:if="${accreditamentoWrapper.responsabileSistemaInformatico != null and !editabile}"><a th:text="#{label.responsabile_sistema_informatico}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileSistemaInformatico.id}/show|}"></a></td>
+													<td th:if="${accreditamentoWrapper.responsabileSistemaInformatico != null and editabile}"><a th:text="#{label.responsabile_sistema_informatico}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileSistemaInformatico.id}/show?from=edit|}"></a></td>
 													<td th:if="${accreditamentoWrapper.responsabileSistemaInformatico == null}"><div th:text="#{label.responsabile_sistema_informatico}"></div></td>
 													<td	th:if="${accreditamentoWrapper.responsabileSistemaInformaticoStato}">
 														<span class="fa table-icon fa-check green" th:title="#{label.ok}"></span>
@@ -262,7 +267,8 @@
 												</tr>
 												<!-- RESPONSABILE QUALITÀ -->
 												<tr>
-													<td th:unless="${accreditamentoWrapper.responsabileQualita == null}"><a th:text="#{label.responsabile_qualita}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileQualita.id}/show|}"></a></td>
+													<td th:if="${accreditamentoWrapper.responsabileQualita != null and !editabile}"><a th:text="#{label.responsabile_qualita}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileQualita.id}/show|}"></a></td>
+													<td th:if="${accreditamentoWrapper.responsabileQualita != null and editabile}"><a th:text="#{label.responsabile_qualita}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileQualita.id}/show?from=edit|}"></a></td>
 													<td th:if="${accreditamentoWrapper.responsabileQualita == null}"><div th:text="#{label.responsabile_qualita}"></div></td>
 													<td	th:if="${accreditamentoWrapper.responsabileQualitaStato}">
 														<span class="fa table-icon fa-check green" th:title="#{label.ok}"></span>
@@ -308,7 +314,8 @@
 											<tbody>
 												<!-- COORDINATORE COMITATO SCIENTIFICO -->
 												<tr>
-													<td th:if="${accreditamentoWrapper.coordinatoreComitatoScientifico}"><a th:text="#{label.coordinatore_comitato}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.coordinatoreComitatoScientifico.id}/show|}"></a></td>
+													<td th:if="${accreditamentoWrapper.coordinatoreComitatoScientifico != null and editabile}"><a th:text="#{label.coordinatore_comitato}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.coordinatoreComitatoScientifico.id}/show?from=edit|}"></a></td>
+													<td th:if="${accreditamentoWrapper.coordinatoreComitatoScientifico != null and !editabile}"><a th:text="#{label.coordinatore_comitato}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.coordinatoreComitatoScientifico.id}/show|}"></a></td>
 													<td th:unless="${accreditamentoWrapper.coordinatoreComitatoScientifico}"><div th:text="#{label.coordinatore_comitato}"></div></td>
 													<td	th:if="${accreditamentoWrapper.coordinatoreComitatoScientifico}" th:text="${accreditamentoWrapper.coordinatoreComitatoScientifico.anagrafica.nome}"></td>
 													<td	th:unless="${accreditamentoWrapper.coordinatoreComitatoScientifico}" th:text="#{label.nd}">N/D</td>
@@ -337,7 +344,8 @@
 												</tr>
 												<!-- COMPONENTI COMITATO SCIENTIFICO -->
 												<tr th:each="componente, row : ${accreditamentoWrapper.componentiComitatoScientifico}">
-													<td th:unless="${componente.new}"><a th:text="#{label.componente_comitato}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${componente.id}/show|}"></a></td>
+													<td th:if="${!componente.new and !editabile}"><a th:text="#{label.componente_comitato}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${componente.id}/show|}"></a></td>
+													<td th:if="${!componente.new and editabile}"><a th:text="#{label.componente_comitato}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${componente.id}/show?from=edit|}"></a></td>
 													<td	th:if="${componente.new}" th:text="#{label.componente_comitato}"></td>
 													<td	th:unless="${componente.new}" th:text="${componente.anagrafica.nome}"></td>
 													<td	th:if="${componente.new}" th:text="#{label.nd}">N/D</td>
