--- a/src/main/resources/templates/provider/providerShow.html
+++ b/src/main/resources/templates/provider/providerShow.html
@@ -12,7 +12,8 @@
 					<div class="x_title">
 						<h2 th:text="#{label.info_provider}">label.info_provider</h2>
 						<div class="pull-right buttons-header">
-							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoId}/show|}"></a>
+							<a th:if="${mode == null}" class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoId}/show|}"></a>
+							<a th:if="${mode != null}" class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoId}/${mode}|}"></a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
