--- a/src/main/resources/templates/accreditamento/datiAccreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoShow.html
@@ -12,7 +12,8 @@
 					<div class="x_title">
 						<h2 th:text="#{label.dati_attività}">Dati relativi all’attività</h2>
 						<div class="pull-right buttons-header">
-							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${datiAccreditamentoWrapper.accreditamentoId}/show|}"></a>
+							<a th:if="${mode == null}" class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${datiAccreditamentoWrapper.accreditamentoId}/show|}"></a>
+							<a th:if="${mode != null}" class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${datiAccreditamentoWrapper.accreditamentoId}/${mode}|}"></a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
