--- a/src/main/resources/templates/evento/eventoShow.html
+++ b/src/main/resources/templates/evento/eventoShow.html
@@ -12,15 +12,13 @@
 					<div class="x_title">
 						<h2 th:text="#{label.visualizza_evento(${eventoWrapper.evento.id})}">Evento</h2>
 						<div class="pull-right buttons-header">
-							<a th:if="${eventoWrapper.accreditamentoId != null and mode != null}" class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${eventoWrapper.accreditamentoId}/${mode}?tab=tab4|}"></a>
-							<a th:if="${eventoWrapper.accreditamentoId != null and mode == null}" class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${eventoWrapper.accreditamentoId}/show?tab=tab4|}"></a>
-							<a th:if="${eventoWrapper.accreditamentoId == null}" class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/provider/${eventoWrapper.providerId}/evento/list|}"></a>
+							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|${returnLink}|}"></a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
 
 					<div id="toModal">
-						<th:block th:include="evento/eventoFragment :: evento(false)"></th:block>
+						<th:block th:include="evento/eventoFragment :: evento(false, false)"></th:block>
 					</div>
 
 				</div>
